; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/ps3/extr_platform_ps3.c_ps3_timebase_freq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/ps3/extr_platform_ps3.c_ps3_timebase_freq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cpuref = type { i32 }

@PS3_LPAR_ID_PME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"be\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"clock\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.cpuref*)* @ps3_timebase_freq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ps3_timebase_freq(i32 %0, %struct.cpuref* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cpuref*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.cpuref* %1, %struct.cpuref** %4, align 8
  %8 = load i32, i32* @PS3_LPAR_ID_PME, align 4
  %9 = call i32 @lv1_repository_string(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %10 = ashr i32 %9, 32
  %11 = call i32 @lv1_get_repository_node_value(i32 %8, i32 %10, i32 0, i32 0, i32 0, i32* %6, i32* %7)
  %12 = load i32, i32* @PS3_LPAR_ID_PME, align 4
  %13 = call i32 @lv1_repository_string(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %14 = ashr i32 %13, 32
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @lv1_repository_string(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %17 = call i32 @lv1_get_repository_node_value(i32 %12, i32 %14, i32 %15, i32 %16, i32 0, i32* %5, i32* %7)
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @lv1_get_repository_node_value(i32, i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @lv1_repository_string(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
